--- a/caa-experimentation-gui/src/main/resources/fxml/results.fxml
+++ b/caa-experimentation-gui/src/main/resources/fxml/results.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1"
+<AnchorPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.mtanevski.master.caa.gui.controllers.ExperimentResultsController">
     <VBox alignment="CENTER" prefHeight="794.0" prefWidth="642.0" AnchorPane.bottomAnchor="0.0"
           AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
